SCRUM-25 SCRUM-29 :thêm tính năng nhảy tới vị trí bản đồ và sắp xếp theo độ khẩn cấp